// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components SchemaView discriminator should correctly render SchemaView 1`] = `
<ObjectSchema
  discriminator={
    Object {
      "fieldName": "type",
      "parentSchema": SchemaModel {
        "_$ref": "#/components/schemas/Pet",
        "activeOneOf": 0,
        "constraints": Array [],
        "default": undefined,
        "deprecated": false,
        "description": "",
        "discriminatorProp": "type",
        "displayType": "Pet (object)",
        "enum": Array [],
        "example": undefined,
        "format": undefined,
        "isCircular": undefined,
        "isPrimitive": false,
        "nullable": false,
        "oneOf": Array [
          SchemaModel {
            "_$ref": "#/components/schemas/Dog",
            "activeOneOf": 0,
            "constraints": Array [],
            "default": undefined,
            "deprecated": false,
            "description": "",
            "displayType": "Dog (object)",
            "enum": Array [],
            "example": undefined,
            "fields": Array [
              FieldModel {
                "deprecated": false,
                "description": "",
                "example": undefined,
                "expanded": false,
                "in": undefined,
                "name": "packSize",
                "required": false,
                "schema": SchemaModel {
                  "_$ref": "#/components/schemas/Dog/properties/packSize/schema",
                  "activeOneOf": 0,
                  "constraints": Array [],
                  "default": undefined,
                  "deprecated": false,
                  "description": "",
                  "displayType": "number",
                  "enum": Array [],
                  "example": undefined,
                  "format": undefined,
                  "isCircular": undefined,
                  "isPrimitive": true,
                  "nullable": false,
                  "pattern": undefined,
                  "rawSchema": Object {
                    "default": undefined,
                    "type": "number",
                  },
                  "schema": Object {
                    "default": undefined,
                    "type": "number",
                  },
                  "title": "",
                  "type": "number",
                  "typePrefix": "",
                },
              },
              FieldModel {
                "deprecated": false,
                "description": "",
                "example": undefined,
                "expanded": false,
                "in": undefined,
                "name": "type",
                "required": true,
                "schema": SchemaModel {
                  "_$ref": "#/components/schemas/Dog/properties/type/schema",
                  "activeOneOf": 0,
                  "constraints": Array [],
                  "default": undefined,
                  "deprecated": false,
                  "description": "",
                  "displayType": "string",
                  "enum": Array [],
                  "example": undefined,
                  "format": undefined,
                  "isCircular": undefined,
                  "isPrimitive": true,
                  "nullable": false,
                  "pattern": undefined,
                  "rawSchema": Object {
                    "default": undefined,
                    "type": "string",
                  },
                  "schema": Object {
                    "default": undefined,
                    "type": "string",
                  },
                  "title": "",
                  "type": "string",
                  "typePrefix": "",
                },
              },
            ],
            "format": undefined,
            "isCircular": undefined,
            "isPrimitive": false,
            "nullable": false,
            "pattern": undefined,
            "rawSchema": Object {
              "allOf": Array [
                Object {
                  "$ref": "#/components/schemas/Pet",
                },
              ],
              "properties": Object {
                "packSize": Object {
                  "type": "number",
                },
              },
              "type": "object",
            },
            "schema": Object {
              "allOf": undefined,
              "discriminator": Object {
                "propertyName": "type",
              },
              "namedParents": Array [
                "#/components/schemas/Pet",
              ],
              "properties": Object {
                "packSize": Object {
                  "type": "number",
                },
                "type": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "type",
              ],
              "title": "Dog",
              "type": "object",
            },
            "title": "Dog",
            "type": "object",
            "typePrefix": "",
          },
          SchemaModel {
            "_$ref": "#/components/schemas/Cat",
            "activeOneOf": 0,
            "constraints": Array [],
            "default": undefined,
            "deprecated": false,
            "description": "",
            "displayType": "Cat (object)",
            "enum": Array [],
            "example": undefined,
            "fields": Array [
              FieldModel {
                "deprecated": false,
                "description": "",
                "example": undefined,
                "expanded": false,
                "in": undefined,
                "name": "type",
                "required": true,
                "schema": SchemaModel {
                  "_$ref": "#/components/schemas/Cat/properties/type/schema",
                  "activeOneOf": 0,
                  "constraints": Array [],
                  "default": undefined,
                  "deprecated": false,
                  "description": "",
                  "displayType": "string",
                  "enum": Array [],
                  "example": undefined,
                  "format": undefined,
                  "isCircular": undefined,
                  "isPrimitive": true,
                  "nullable": false,
                  "pattern": undefined,
                  "rawSchema": Object {
                    "default": undefined,
                    "type": "string",
                  },
                  "schema": Object {
                    "default": undefined,
                    "type": "string",
                  },
                  "title": "",
                  "type": "string",
                  "typePrefix": "",
                },
              },
              FieldModel {
                "deprecated": false,
                "description": "",
                "example": undefined,
                "expanded": false,
                "in": undefined,
                "name": "packSize",
                "required": false,
                "schema": SchemaModel {
                  "_$ref": "#/components/schemas/Cat/properties/packSize/schema",
                  "activeOneOf": 0,
                  "constraints": Array [],
                  "default": undefined,
                  "deprecated": false,
                  "description": "",
                  "displayType": "number",
                  "enum": Array [],
                  "example": undefined,
                  "format": undefined,
                  "isCircular": undefined,
                  "isPrimitive": true,
                  "nullable": false,
                  "pattern": undefined,
                  "rawSchema": Object {
                    "default": undefined,
                    "type": "number",
                  },
                  "schema": Object {
                    "default": undefined,
                    "type": "number",
                  },
                  "title": "",
                  "type": "number",
                  "typePrefix": "",
                },
              },
            ],
            "format": undefined,
            "isCircular": undefined,
            "isPrimitive": true,
            "nullable": false,
            "pattern": undefined,
            "rawSchema": Object {
              "allOf": Array [
                Object {
                  "$ref": "#/components/schemas/Pet",
                },
                Object {
                  "properties": Object {
                    "packSize": Object {
                      "type": "number",
                    },
                  },
                },
              ],
              "type": "object",
            },
            "schema": Object {
              "allOf": undefined,
              "discriminator": Object {
                "propertyName": "type",
              },
              "namedParents": Array [
                "#/components/schemas/Pet",
              ],
              "properties": Object {
                "packSize": Object {
                  "type": "number",
                },
                "type": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "type",
              ],
              "title": "Cat",
              "type": undefined,
            },
            "title": "Cat",
            "type": "object",
            "typePrefix": "",
          },
        ],
        "pattern": undefined,
        "rawSchema": Object {
          "discriminator": Object {
            "propertyName": "type",
          },
          "properties": Object {
            "type": Object {
              "type": "string",
            },
          },
          "required": Array [
            "type",
          ],
          "type": "object",
        },
        "schema": Object {
          "discriminator": Object {
            "propertyName": "type",
          },
          "properties": Object {
            "type": Object {
              "type": "string",
            },
          },
          "required": Array [
            "type",
          ],
          "type": "object",
        },
        "title": "Pet",
        "type": "object",
        "typePrefix": "",
      },
    }
  }
  schema={
    SchemaModel {
      "_$ref": "#/components/schemas/Dog",
      "activeOneOf": 0,
      "constraints": Array [],
      "default": undefined,
      "deprecated": false,
      "description": "",
      "displayType": "Dog (object)",
      "enum": Array [],
      "example": undefined,
      "fields": Array [
        FieldModel {
          "deprecated": false,
          "description": "",
          "example": undefined,
          "expanded": false,
          "in": undefined,
          "name": "packSize",
          "required": false,
          "schema": SchemaModel {
            "_$ref": "#/components/schemas/Dog/properties/packSize/schema",
            "activeOneOf": 0,
            "constraints": Array [],
            "default": undefined,
            "deprecated": false,
            "description": "",
            "displayType": "number",
            "enum": Array [],
            "example": undefined,
            "format": undefined,
            "isCircular": undefined,
            "isPrimitive": true,
            "nullable": false,
            "pattern": undefined,
            "rawSchema": Object {
              "default": undefined,
              "type": "number",
            },
            "schema": Object {
              "default": undefined,
              "type": "number",
            },
            "title": "",
            "type": "number",
            "typePrefix": "",
          },
        },
        FieldModel {
          "deprecated": false,
          "description": "",
          "example": undefined,
          "expanded": false,
          "in": undefined,
          "name": "type",
          "required": true,
          "schema": SchemaModel {
            "_$ref": "#/components/schemas/Dog/properties/type/schema",
            "activeOneOf": 0,
            "constraints": Array [],
            "default": undefined,
            "deprecated": false,
            "description": "",
            "displayType": "string",
            "enum": Array [],
            "example": undefined,
            "format": undefined,
            "isCircular": undefined,
            "isPrimitive": true,
            "nullable": false,
            "pattern": undefined,
            "rawSchema": Object {
              "default": undefined,
              "type": "string",
            },
            "schema": Object {
              "default": undefined,
              "type": "string",
            },
            "title": "",
            "type": "string",
            "typePrefix": "",
          },
        },
      ],
      "format": undefined,
      "isCircular": undefined,
      "isPrimitive": false,
      "nullable": false,
      "pattern": undefined,
      "rawSchema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/Pet",
          },
        ],
        "properties": Object {
          "packSize": Object {
            "type": "number",
          },
        },
        "type": "object",
      },
      "schema": Object {
        "allOf": undefined,
        "discriminator": Object {
          "propertyName": "type",
        },
        "namedParents": Array [
          "#/components/schemas/Pet",
        ],
        "properties": Object {
          "packSize": Object {
            "type": "number",
          },
          "type": Object {
            "type": "string",
          },
        },
        "required": Array [
          "type",
        ],
        "title": "Dog",
        "type": "object",
      },
      "title": "Dog",
      "type": "object",
      "typePrefix": "",
    }
  }
/>
`;

exports[`Components SchemaView discriminator should correctly render discriminator dropdown 1`] = `
<styled.table>
  <tbody>
    <Field
      field={
        FieldModel {
          "deprecated": false,
          "description": "",
          "example": undefined,
          "expanded": false,
          "in": undefined,
          "name": "packSize",
          "required": false,
          "schema": SchemaModel {
            "_$ref": "#/components/schemas/Dog/properties/packSize/schema",
            "activeOneOf": 0,
            "constraints": Array [],
            "default": undefined,
            "deprecated": false,
            "description": "",
            "displayType": "number",
            "enum": Array [],
            "example": undefined,
            "format": undefined,
            "isCircular": undefined,
            "isPrimitive": true,
            "nullable": false,
            "pattern": undefined,
            "rawSchema": Object {
              "default": undefined,
              "type": "number",
            },
            "schema": Object {
              "default": undefined,
              "type": "number",
            },
            "title": "",
            "type": "number",
            "typePrefix": "",
          },
        }
      }
      isLast={false}
      key="packSize"
      showExamples={false}
    />
    <Field
      field={
        FieldModel {
          "deprecated": false,
          "description": "",
          "example": undefined,
          "expanded": false,
          "in": undefined,
          "name": "type",
          "required": true,
          "schema": SchemaModel {
            "_$ref": "#/components/schemas/Dog/properties/type/schema",
            "activeOneOf": 0,
            "constraints": Array [],
            "default": undefined,
            "deprecated": false,
            "description": "",
            "displayType": "string",
            "enum": Array [],
            "example": undefined,
            "format": undefined,
            "isCircular": undefined,
            "isPrimitive": true,
            "nullable": false,
            "pattern": undefined,
            "rawSchema": Object {
              "default": undefined,
              "type": "string",
            },
            "schema": Object {
              "default": undefined,
              "type": "string",
            },
            "title": "",
            "type": "string",
            "typePrefix": "",
          },
        }
      }
      isLast={true}
      key="type"
      renderDiscriminatorSwitch={[Function]}
      showExamples={false}
    />
  </tbody>
</styled.table>
`;
